안정화, 다듬기 작업

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -16,7 +16,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button1"
+            android:text="無"
             tools:layout_editor_absoluteX="116dp"
             tools:layout_editor_absoluteY="262dp" />
 
